@@ -362,8 +362,13 @@ Disabling this will make your node to require more RAM, but may be necessary for
 <td> 72</td>
 <td class="cfg_info"> How many block down the chain to look for calculating the current average block size.</td>
 </tr>
-<tr>
-
+<tr class="odd">
+<td class="cfg_name"> Stat.NoCounters</td>
+<td class="cfg_type"> bool</td>
+<td> false</td>
+<td class="cfg_info"> When set, it turns off node's internal counters to improve performance.</td>
+</tr>
+    
 <tr class="even">
 <td class="cfg_name"> UTXOSave.BlocksToHold</td>
 <td class="cfg_type"> uint</td>
