@@ -7,6 +7,11 @@
 On this page you can find ways to improve performance and lower resource consumptions
 of a running <b>client</b>.<br>
 
+<h2>Disable counters</h2>
+Edit the <a href="gocoin_manual_config.html"></a>config file</a> and set the value of <code>Stats.NoCounters</code> to <b>true</b>.<br>
+This will turn off node's internal statistics which should improve performance.<br>
+<br>
+
 <h2>Disable wallet functionality</h2>
 
 You can disable node's wallet functionality, to save system memory used by a running client
